# dod-budget-analysis

./: .dockerignore  .gitignore  .pre-commit-hook.py  00_START_HERE.md  AGENT_PROMPTS.md  API_SPECIFICATION.yaml  BEAR_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  Dockerfile.multistage  FIX_AND_RESTART.md  FUTURE_OPTIMIZATIONS.md  LICENSE  LION_INSTRUCTIONS.md  OH_MY_INSTRUCTIONS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_QUICKREF.md  OPTIMIZATION_SUMMARY.md  README.md  REMAINING_TODOS.md  ROADMAP.md  TEST_RESULTS.md  TIGER_INSTRUCTIONS.md  api_design.py  backfill_reference_tables.py  build_budget_db.py  build_budget_gui.py  data_quality_report.json  deployment_design.py  docker-compose.staging.yml  docker-compose.yml  dod_budget.sqlite-shm  dod_budget_downloader.py  enrich_budget_db.py  exhibit_catalog.py  exhibit_type_inventory.py  frontend_design.py  (+20 more)
OPTIMIZATION_DOCS/: 00_START_HERE.md  COMPLETE_OPTIMIZATION_GUIDE.md  INDEX.md  README_OPTIMIZATIONS.md
_optimization/: TIMEOUT_IMPLEMENTATION.md  monitor_build.py
api/: __init__.py  app.py  database.py  models.py
docker/: Dockerfile  Dockerfile.multistage  docker-compose.yml
docs/: API_ENDPOINT_SPECIFICATION.md  DATA_SOURCES.md  FEATURE_REVIEW.md  FRONTEND_TECHNOLOGY_DECISION.md  GUI_DECISIONS_AND_QUESTIONS.md  GUI_IMPLEMENTATION_PLAN.md  GUI_MVP_IMPROVEMENT_PLAN.md  GUI_ROADMAP.md  HYPERSONICS_IMPROVEMENTS.md  HYPERSONICS_PLAN.md  NOTICED_ISSUES.md  OPTIMIZATION_CLEANUP_COMPLETE.txt  OPTIMIZATION_SUMMARY.txt  PRD.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  TASK_INDEX.md  TODO_0A1_merge_roadmap_into_readme.md  TODO_0A2_create_wiki_skeleton.md  TODO_1A1_audit_downloader_coverage.md  TODO_1A2_expand_fiscal_year_coverage.md  TODO_1A3_harden_download_reliability.md  TODO_1A4_automate_download_scheduling.md  TODO_PLAN.md  deployment.md  (+18 more)
(+416 files in other folders)
