[project]
name = "dod-budget-analysis"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# DONE [Group: BEAR] BEAR-006: Coverage threshold enforcement
[tool.coverage.run]
source = ["api", "utils"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
]
